[package]
name = "neptune"
description = "Poseidon hashing over BLS12-381 for Filecoin."
version = "2.0.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/porcuquine/poseidon"

[dependencies]
lazy_static = "1.4.0"
bellperson = { git = "ssh://git@github.com/nilfoundation/crusty3-zk.git", branch = "master" }
blake2s_simd = "0.5"
byteorder = "1"
ff = { git = "https://github.com/nilfoundation/crusty3-ff.git", rev = "6c3e204", package = "fff" }
generic-array = "0.13.2"
paired = { git = "https://github.com/nilfoundation/crusty3-pairing", version = "0.20.0", features = ["serde"] }
triton = { git = "https://github.com/nilfoundation/crusty3-neptune-triton", version = "1.1.3", package = "neptune-triton", default-features = false, features = ["opencl"], optional = true }
log = "0.4.8"

[dev-dependencies]
criterion = "0.3"
rand = "0.7.0"
sha2 = "0.8"
tempdir = "0.3"
rand_xorshift = "0.2.0"
serde_json = "1.0.53"

[build-dependencies]
paired = { git = "https://github.com/nilfoundation/crusty3-pairing", version = "0.20.0" }
ff = { git = "https://github.com/nilfoundation/crusty3-ff.git", rev = "6c3e204", package = "fff" }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "synthesis"
harness = false

[profile.bench]
incremental = false
codegen-units = 1

[features]
gpu = ["triton"]
derive = ["ff/fff_derive"]
