[package]
name = "neptune"
description = "Poseidon hashing over BLS12-381 for Filecoin."
version = "3.0.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/neptune"

[dependencies]
lazy_static = "1.4.0"
bellperson = { git = "ssh://git@github.com/nilfoundation/eliovp-fil-zk.git", branch = "master", default-features = false, features = ["gpu"] }
blake2s_simd = "0.5"
blstrs = { version = "0.3.0", optional = true }
byteorder = "1"
paired = { version = "0.21.0", features = ["serde"] }
ff = { version = "0.3.1", package = "fff" }
generic-array = "0.14.4"
log = "0.4.8"
rust-gpu-tools = { version = "0.3.0", optional = true }
triton = { git = "ssh://git@github.com/nilfoundation/eliovp-crusty3-neptune-triton.git", branch = "master", package = "neptune-triton", default-features = false, features = ["opencl"], optional = true }
itertools = { version = "0.8.0" }
ff-cl-gen = { git = "ssh://git@github.com/nilfoundation/eliovp-ff-cl-gen.git", branch = "master" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7.0"
sha2 = "0.9"
tempdir = "0.3"
rand_xorshift = "0.2.0"
serde_json = "1.0.53"

[build-dependencies]
bellperson = { git = "ssh://git@github.com/nilfoundation/eliovp-fil-zk.git", branch = "master", default-features = false, features = ["gpu"] }
ff = { version = "0.3.1", package = "fff" }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "synthesis"
harness = false

[profile.bench]
incremental = false
codegen-units = 1

[features]
default = ["blst", "opencl"]
gpu = ["triton", "rust-gpu-tools"]
opencl = ["rust-gpu-tools"]
pairing = ["bellperson/pairing"]
blst = ["bellperson/blst"]

[workspace]
members = [
    "gbench",
]
