[package]
name = "gbench"
description = "GPU benchmark program for Neptune"
version = "0.5.4"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
bellperson = { git = "ssh://git@github.com/nilfoundation/crusty3-zk.git", branch = "master" }
blake2s_simd = "0.5"
byteorder = "1"
env_logger = "0.7.1"
ff = { git = "https://github.com/nilfoundation/crusty3-ff.git", rev = "6c3e204", package = "fff" }
generic-array = "0.13.2"
log = "0.4.8"
paired = { git = "https://github.com/nilfoundation/crusty3-pairing", version = "0.20.0" }
neptune = { path = "../", features=["gpu"] }
